fix: hardcode CORS and add missing endpoints to permitAll
Co-authored-by: Cursor <cursoragent@cursor.com>